1.3.0-SNAPSHOT, Java 21, latest dependencies, required corrections